--- a/combined_wiki_kaggle.ipynb
+++ b/combined_wiki_kaggle.ipynb
@@ -27523,16 +27523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84569c07",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 61,
-   "id": "8b2b8899",
+   "id": "f17ae904",
    "metadata": {},
    "outputs": [
     {
@@ -27559,7 +27551,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "bccee43d",
+   "id": "30999557",
    "metadata": {},
    "outputs": [
     {
@@ -27585,7 +27577,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4b75ea32",
+   "id": "74571d92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27595,7 +27587,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "78f53e40",
+   "id": "212d787f",
    "metadata": {},
    "outputs": [
     {
@@ -27659,7 +27651,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d0221a16",
+   "id": "9552f4b3",
    "metadata": {},
    "outputs": [
     {
@@ -27778,7 +27770,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "84484b5d",
+   "id": "71522070",
    "metadata": {},
    "outputs": [
     {
@@ -27910,7 +27902,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b58fb0cd",
+   "id": "4147e10f",
    "metadata": {},
    "outputs": [
     {
@@ -27984,7 +27976,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "11652d2f",
+   "id": "6f8241e2",
    "metadata": {},
    "outputs": [
     {
@@ -28018,7 +28010,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "b253e6af",
+   "id": "0c925a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28030,7 +28022,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e0e57aa3",
+   "id": "3c3e7f87",
    "metadata": {},
    "outputs": [
     {
@@ -28064,7 +28056,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "d244adf0",
+   "id": "783b3641",
    "metadata": {},
    "outputs": [
     {
@@ -28098,7 +28090,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "532b58f3",
+   "id": "66129521",
    "metadata": {},
    "outputs": [
     {
@@ -28132,7 +28124,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2c073753",
+   "id": "2f569def",
    "metadata": {},
    "outputs": [
     {
@@ -28250,7 +28242,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "36002a57",
+   "id": "0d1bb129",
    "metadata": {},
    "outputs": [
     {
@@ -28272,7 +28264,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "5e4d9d6f",
+   "id": "7d800c4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28283,7 +28275,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "f4c93481",
+   "id": "978eb071",
    "metadata": {},
    "outputs": [
     {
@@ -28747,7 +28739,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "e7a5db1f",
+   "id": "0c767c94",
    "metadata": {},
    "outputs": [
     {
@@ -28879,7 +28871,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "4d9cdfa8",
+   "id": "eab40b55",
    "metadata": {},
    "outputs": [
     {
@@ -28913,7 +28905,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "5e8726dc",
+   "id": "e2e59562",
    "metadata": {},
    "outputs": [
     {
@@ -28952,7 +28944,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "5b10329d",
+   "id": "cc09bc1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28971,7 +28963,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "0e7e912b",
+   "id": "a20f3535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28982,7 +28974,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "c2c192db",
+   "id": "3a787bef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28997,7 +28989,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "da0ea328",
+   "id": "798eeca9",
    "metadata": {},
    "outputs": [
     {
@@ -29489,7 +29481,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "37a680c3",
+   "id": "6e5742cf",
    "metadata": {},
    "outputs": [
     {
@@ -29518,8 +29510,201 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "4fc01dbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['userId', 'movieId', 'rating', 'timestamp'], dtype='object')"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "8fb1144b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get ratings counts by movie Id, rename userId to count, change index\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()\\\n",
+    ".rename({'userId':'count'},axis=1)\\\n",
+    ".pivot(index='movieId',columns='rating',values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "82c4097e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rename columns\n",
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "adaea12e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "url                      6051\n",
+       "year                     6051\n",
+       "imdb_link                6051\n",
+       "Based on                 1972\n",
+       "Starring                 5939\n",
+       "Cinematography           5567\n",
+       "Release date             6040\n",
+       "Country                  5881\n",
+       "Director                 6051\n",
+       "Distributor              5869\n",
+       "Editor(s)                5700\n",
+       "Composer(s)              5703\n",
+       "Producer(s)              5934\n",
+       "Writer(s)                5916\n",
+       "imdb_id                  6051\n",
+       "belongs_to_collection    1029\n",
+       "budget                   4627\n",
+       "genres                   6051\n",
+       "homepage                 1796\n",
+       "id                       6051\n",
+       "original_language        6051\n",
+       "original_title           6051\n",
+       "overview                 6046\n",
+       "popularity               6051\n",
+       "poster_path              6049\n",
+       "production_companies     6051\n",
+       "production_countries     6051\n",
+       "release_date_movies      6051\n",
+       "revenue                  5171\n",
+       "runtime                  6050\n",
+       "spoken_languages         6051\n",
+       "status                   6047\n",
+       "tagline                  4917\n",
+       "title_movies             6051\n",
+       "video                    6051\n",
+       "vote_average             6051\n",
+       "vote_count               6051\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "089eb87f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#merge ratings into movies_df\n",
+    "movies_with_ratings_df = pd.merge(movies_df,rating_counts, left_on='id',right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "54c0df60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "url                      6051\n",
+       "year                     6051\n",
+       "imdb_link                6051\n",
+       "Based on                 1972\n",
+       "Starring                 5939\n",
+       "Cinematography           5567\n",
+       "Release date             6040\n",
+       "Country                  5881\n",
+       "Director                 6051\n",
+       "Distributor              5869\n",
+       "Editor(s)                5700\n",
+       "Composer(s)              5703\n",
+       "Producer(s)              5934\n",
+       "Writer(s)                5916\n",
+       "imdb_id                  6051\n",
+       "belongs_to_collection    1029\n",
+       "budget                   4627\n",
+       "genres                   6051\n",
+       "homepage                 1796\n",
+       "id                       6051\n",
+       "original_language        6051\n",
+       "original_title           6051\n",
+       "overview                 6046\n",
+       "popularity               6051\n",
+       "poster_path              6049\n",
+       "production_companies     6051\n",
+       "production_countries     6051\n",
+       "release_date_movies      6051\n",
+       "revenue                  5171\n",
+       "runtime                  6050\n",
+       "spoken_languages         6051\n",
+       "status                   6047\n",
+       "tagline                  4917\n",
+       "title_movies             6051\n",
+       "video                    6051\n",
+       "vote_average             6051\n",
+       "vote_count               6051\n",
+       "rating_0.5               1133\n",
+       "rating_1.0               1127\n",
+       "rating_1.5               1024\n",
+       "rating_2.0               1224\n",
+       "rating_2.5               1230\n",
+       "rating_3.0               1310\n",
+       "rating_3.5               1269\n",
+       "rating_4.0               1283\n",
+       "rating_4.5               1079\n",
+       "rating_5.0               1161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_with_ratings_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "477f816d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fill in missing ratings\n",
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4dc79e15",
+   "id": "282fc49c",
    "metadata": {},
    "outputs": [],
    "source": []
