--- a/combined_wiki_kaggle.ipynb
+++ b/combined_wiki_kaggle.ipynb
@@ -7,10 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dependencies\n",
+    "\n",
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "import time\n",
+    "from sqlalchemy import create_engine\n",
+    "from config import db_password\n",
+    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/movie_data\""
    ]
   },
   {
@@ -27524,7 +27530,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f17ae904",
+   "id": "6ceed86e",
    "metadata": {},
    "outputs": [
     {
@@ -27551,7 +27557,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "30999557",
+   "id": "e8f2b32f",
    "metadata": {},
    "outputs": [
     {
@@ -27577,7 +27583,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "74571d92",
+   "id": "68c7899b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27587,7 +27593,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "212d787f",
+   "id": "1347cd82",
    "metadata": {},
    "outputs": [
     {
@@ -27651,7 +27657,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "9552f4b3",
+   "id": "a5de87fa",
    "metadata": {},
    "outputs": [
     {
@@ -27770,7 +27776,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "71522070",
+   "id": "3c9674a6",
    "metadata": {},
    "outputs": [
     {
@@ -27902,7 +27908,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "4147e10f",
+   "id": "4ae78181",
    "metadata": {},
    "outputs": [
     {
@@ -27976,7 +27982,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "6f8241e2",
+   "id": "293e0991",
    "metadata": {},
    "outputs": [
     {
@@ -28009,8 +28015,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "0c925a42",
+   "execution_count": 69,
+   "id": "e02e5531",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28021,8 +28027,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "3c3e7f87",
+   "execution_count": 70,
+   "id": "399b10b6",
    "metadata": {},
    "outputs": [
     {
@@ -28031,7 +28037,7 @@
        "<AxesSubplot:xlabel='box_office', ylabel='revenue'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -28055,8 +28061,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "783b3641",
+   "execution_count": 71,
+   "id": "ec1b47fc",
    "metadata": {},
    "outputs": [
     {
@@ -28065,7 +28071,7 @@
        "<AxesSubplot:xlabel='box_office', ylabel='revenue'>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -28089,8 +28095,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "66129521",
+   "execution_count": 72,
+   "id": "8d351bcf",
    "metadata": {},
    "outputs": [
     {
@@ -28099,7 +28105,7 @@
        "<AxesSubplot:xlabel='release_date_wiki'>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -28123,8 +28129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "2f569def",
+   "execution_count": 73,
+   "id": "8cd654a1",
    "metadata": {},
    "outputs": [
     {
@@ -28229,7 +28235,7 @@
        "[1 rows x 44 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28241,8 +28247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "0d1bb129",
+   "execution_count": 74,
+   "id": "1cbd97fc",
    "metadata": {},
    "outputs": [
     {
@@ -28251,7 +28257,7 @@
        "Int64Index([3607], dtype='int64')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28263,8 +28269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "7d800c4a",
+   "execution_count": 75,
+   "id": "4580686d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28274,8 +28280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "978eb071",
+   "execution_count": 76,
+   "id": "50bdcd1a",
    "metadata": {},
    "outputs": [
     {
@@ -28726,7 +28732,7 @@
        "[11 rows x 44 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28738,8 +28744,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "0c767c94",
+   "execution_count": 77,
+   "id": "2f05bef8",
    "metadata": {},
    "outputs": [
     {
@@ -28858,7 +28864,7 @@
        "[6051 rows x 2 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28870,28 +28876,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "eab40b55",
+   "execution_count": 78,
+   "id": "235d88ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "English                                     5479\n",
-       "NaN                                          134\n",
-       "(English, Spanish)                            68\n",
-       "(English, French)                             35\n",
-       "(English, Japanese)                           25\n",
-       "                                            ... \n",
-       "(English, French, Mandarin)                    1\n",
-       "(English, Cantonese, Japanese, Mandarin)       1\n",
-       "(English, Mandarin, Russian)                   1\n",
-       "(English, Lao)                                 1\n",
-       "Swedish                                        1\n",
+       "English                                                              5479\n",
+       "NaN                                                                   134\n",
+       "(English, Spanish)                                                     68\n",
+       "(English, French)                                                      35\n",
+       "(English, Japanese)                                                    25\n",
+       "                                                                     ... \n",
+       "(English, Scottish Gaelic, Irish)                                       1\n",
+       "(English, German, Italian)                                              1\n",
+       "(English, Old Norse)                                                    1\n",
+       "(English (, Undefeatable, ), Cantonese, (, Bloody Mary Killer, ))       1\n",
+       "French/English                                                          1\n",
        "Name: Language, Length: 198, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28904,8 +28910,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "e2e59562",
+   "execution_count": 79,
+   "id": "47f9f1c5",
    "metadata": {},
    "outputs": [
     {
@@ -28921,18 +28927,18 @@
        "zh       4\n",
        "da       2\n",
        "hi       2\n",
-       "sv       1\n",
+       "cn       1\n",
        "ar       1\n",
-       "tr       1\n",
        "he       1\n",
        "ab       1\n",
-       "ru       1\n",
-       "cn       1\n",
+       "sv       1\n",
+       "tr       1\n",
        "ko       1\n",
+       "ru       1\n",
        "Name: original_language, dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28943,8 +28949,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "cc09bc1e",
+   "execution_count": 80,
+   "id": "2e5e05c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28962,8 +28968,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "a20f3535",
+   "execution_count": 81,
+   "id": "0218038d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28973,8 +28979,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "3a787bef",
+   "execution_count": 82,
+   "id": "8139d884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28988,8 +28994,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "798eeca9",
+   "execution_count": 83,
+   "id": "df7ea326",
    "metadata": {},
    "outputs": [
     {
@@ -29466,7 +29472,7 @@
        "[6051 rows x 37 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29480,8 +29486,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "6e5742cf",
+   "execution_count": 84,
+   "id": "41bbc60a",
    "metadata": {},
    "outputs": [
     {
@@ -29499,7 +29505,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29510,8 +29516,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "4fc01dbd",
+   "execution_count": 85,
+   "id": "e9664b4e",
    "metadata": {},
    "outputs": [
     {
@@ -29520,7 +29526,7 @@
        "Index(['userId', 'movieId', 'rating', 'timestamp'], dtype='object')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29531,8 +29537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "8fb1144b",
+   "execution_count": 86,
+   "id": "29e1d0dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29544,8 +29550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "82c4097e",
+   "execution_count": 87,
+   "id": "388b43a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29555,8 +29561,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "adaea12e",
+   "execution_count": 88,
+   "id": "f5450a61",
    "metadata": {},
    "outputs": [
     {
@@ -29602,7 +29608,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29613,8 +29619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "089eb87f",
+   "execution_count": 89,
+   "id": "4670b5f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29624,8 +29630,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "54c0df60",
+   "execution_count": 90,
+   "id": "e5dc0289",
    "metadata": {},
    "outputs": [
     {
@@ -29681,7 +29687,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29692,8 +29698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "477f816d",
+   "execution_count": 91,
+   "id": "7ced015d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29703,8 +29709,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "id": "967d2243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create database engine\n",
+    "engine=create_engine(db_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "282fc49c",
+   "id": "321270c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import movie data to SQL\n",
+    "movies_df.to_sql(name='movies',con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "428bf49a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "url                      6051\n",
+       "year                     6051\n",
+       "imdb_link                6051\n",
+       "Based on                 1972\n",
+       "Starring                 5939\n",
+       "Cinematography           5567\n",
+       "Release date             6040\n",
+       "Country                  5881\n",
+       "Director                 6051\n",
+       "Distributor              5869\n",
+       "Editor(s)                5700\n",
+       "Composer(s)              5703\n",
+       "Producer(s)              5934\n",
+       "Writer(s)                5916\n",
+       "imdb_id                  6051\n",
+       "belongs_to_collection    1029\n",
+       "budget                   4627\n",
+       "genres                   6051\n",
+       "homepage                 1796\n",
+       "id                       6051\n",
+       "original_language        6051\n",
+       "original_title           6051\n",
+       "overview                 6046\n",
+       "popularity               6051\n",
+       "poster_path              6049\n",
+       "production_companies     6051\n",
+       "production_countries     6051\n",
+       "release_date_movies      6051\n",
+       "revenue                  5171\n",
+       "runtime                  6050\n",
+       "spoken_languages         6051\n",
+       "status                   6047\n",
+       "tagline                  4917\n",
+       "title_movies             6051\n",
+       "video                    6051\n",
+       "vote_average             6051\n",
+       "vote_count               6051\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count to compare to SQL load\n",
+    "movies_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "8a93e1f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done.  27.532836437225342 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done.  55.07145285606384 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done.  82.20690870285034 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done.  110.37627673149109 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done.  144.81204867362976 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done.  173.13439011573792 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done.  200.53112840652466 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done.  228.02666330337524 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done.  255.77267837524414 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done.  282.89506006240845 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done.  310.6198060512543 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done.  339.02085852622986 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done.  369.03488969802856 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done.  398.45404505729675 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done.  426.3741328716278 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done.  454.66266560554504 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done.  482.37082958221436 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done.  509.8183915615082 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done.  537.1742038726807 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done.  563.9570972919464 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done.  591.1029672622681 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done.  618.1741387844086 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done.  644.5874655246735 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done.  671.8387401103973 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done.  698.8692743778229 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done.  729.2237994670868 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done.  730.0092070102692 total seconds elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import ratings data to SQL\n",
+    "\n",
+    "#Create a variable for the number rows imported\n",
+    "rows_imported = 0\n",
+    "\n",
+    "#get the start_time from time.time()\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for data in pd.read_csv(f'{file_dir}\\\\ratings.csv',chunksize=1000000):\n",
+    "    \n",
+    "    #print the range of rows that are being imported\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...',end='')\n",
+    "    \n",
+    "    data.to_sql(name='ratings',con=engine,if_exists='append')\n",
+    "    \n",
+    "    #increment the number of rows imported by the chunksize\n",
+    "    rows_imported += len(data)\n",
+    "    \n",
+    "    #print message that rows have finished importing\n",
+    "    print(f'Done.  {time.time() - start_time} total seconds elapsed' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69352150",
    "metadata": {},
    "outputs": [],
    "source": []
