--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -209,6 +209,11 @@
     "    #Remove the citation references\n",
     "    budget = budget.str.replace(r'\\[\\d+\\]\\s*','')\n",
     "    \n",
+    "    #parse the budget values\n",
+    "    wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
+    "\n",
+    "    #drop the original Budget column\n",
+    "    #wiki_movies_df.drop('Budget', axis=1, inplace=True)\n",
     "    \n",
     "    # 15. Clean the release date column in the wiki_movies_df DataFrame.\n",
     "    \n",
@@ -329,7 +334,6 @@
        "      <th>Country</th>\n",
        "      <th>Language</th>\n",
        "      <th>...</th>\n",
-       "      <th>Distributor</th>\n",
        "      <th>Editor(s)</th>\n",
        "      <th>Composer(s)</th>\n",
        "      <th>Producer(s)</th>\n",
@@ -337,6 +341,7 @@
        "      <th>Writer(s)</th>\n",
        "      <th>imdb_id</th>\n",
        "      <th>box_office</th>\n",
+       "      <th>budget</th>\n",
        "      <th>release_date</th>\n",
        "      <th>running_time</th>\n",
        "    </tr>\n",
@@ -355,7 +360,6 @@
        "      <td>United States</td>\n",
        "      <td>English</td>\n",
        "      <td>...</td>\n",
-       "      <td>20th Century Fox</td>\n",
        "      <td>Michael Tronick</td>\n",
        "      <td>[Cliff Eidelman, Yello]</td>\n",
        "      <td>[Steve Perry, Joel Silver]</td>\n",
@@ -363,6 +367,7 @@
        "      <td>[David Arnott, James Cappe]</td>\n",
        "      <td>tt0098987</td>\n",
        "      <td>21400000.0</td>\n",
+       "      <td>20000000.0</td>\n",
        "      <td>1990-07-11</td>\n",
        "      <td>102.0</td>\n",
        "    </tr>\n",
@@ -379,7 +384,6 @@
        "      <td>United States</td>\n",
        "      <td>English</td>\n",
        "      <td>...</td>\n",
-       "      <td>Avenue Pictures</td>\n",
        "      <td>Howard E. Smith</td>\n",
        "      <td>Maurice Jarre</td>\n",
        "      <td>[Ric Kidney, Robert Redlin]</td>\n",
@@ -387,6 +391,7 @@
        "      <td>[James Foley, Robert Redlin]</td>\n",
        "      <td>tt0098994</td>\n",
        "      <td>2700000.0</td>\n",
+       "      <td>6000000.0</td>\n",
        "      <td>1990-05-17</td>\n",
        "      <td>114.0</td>\n",
        "    </tr>\n",
@@ -403,7 +408,6 @@
        "      <td>United States</td>\n",
        "      <td>[English, Lao]</td>\n",
        "      <td>...</td>\n",
-       "      <td>TriStar Pictures</td>\n",
        "      <td>[John Bloom, Lois Freeman-Fox]</td>\n",
        "      <td>Charles Gross</td>\n",
        "      <td>Daniel Melnick</td>\n",
@@ -411,6 +415,7 @@
        "      <td>[John Eskow, Richard Rush]</td>\n",
        "      <td>tt0099005</td>\n",
        "      <td>57718089.0</td>\n",
+       "      <td>35000000.0</td>\n",
        "      <td>1990-08-10</td>\n",
        "      <td>113.0</td>\n",
        "    </tr>\n",
@@ -427,7 +432,6 @@
        "      <td>United States</td>\n",
        "      <td>English</td>\n",
        "      <td>...</td>\n",
-       "      <td>Orion Pictures</td>\n",
        "      <td>Susan E. Morse</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Robert Greenhut</td>\n",
@@ -435,6 +439,7 @@
        "      <td>Woody Allen</td>\n",
        "      <td>tt0099012</td>\n",
        "      <td>7331647.0</td>\n",
+       "      <td>12000000.0</td>\n",
        "      <td>1990-12-25</td>\n",
        "      <td>106.0</td>\n",
        "    </tr>\n",
@@ -451,7 +456,6 @@
        "      <td>US</td>\n",
        "      <td>English</td>\n",
        "      <td>...</td>\n",
-       "      <td>Paramount Pictures</td>\n",
        "      <td>David Stiven</td>\n",
        "      <td>Maurice Jarre</td>\n",
        "      <td>John Cornell</td>\n",
@@ -459,12 +463,13 @@
        "      <td>Paul Hogan</td>\n",
        "      <td>tt0099018</td>\n",
        "      <td>6939946.0</td>\n",
+       "      <td>25000000.0</td>\n",
        "      <td>1990-12-19</td>\n",
        "      <td>95.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -503,12 +508,12 @@
        "3              [December 25, 1990, (, 1990-12-25, )]  United States   \n",
        "4                                  December 19, 1990             US   \n",
        "\n",
-       "         Language  ...         Distributor                       Editor(s)  \\\n",
-       "0         English  ...    20th Century Fox                 Michael Tronick   \n",
-       "1         English  ...     Avenue Pictures                 Howard E. Smith   \n",
-       "2  [English, Lao]  ...    TriStar Pictures  [John Bloom, Lois Freeman-Fox]   \n",
-       "3         English  ...      Orion Pictures                  Susan E. Morse   \n",
-       "4         English  ...  Paramount Pictures                    David Stiven   \n",
+       "         Language  ...                       Editor(s)  \\\n",
+       "0         English  ...                 Michael Tronick   \n",
+       "1         English  ...                 Howard E. Smith   \n",
+       "2  [English, Lao]  ...  [John Bloom, Lois Freeman-Fox]   \n",
+       "3         English  ...                  Susan E. Morse   \n",
+       "4         English  ...                    David Stiven   \n",
        "\n",
        "               Composer(s)                  Producer(s)  \\\n",
        "0  [Cliff Eidelman, Yello]   [Steve Perry, Joel Silver]   \n",
@@ -524,14 +529,14 @@
        "3                                    NaN                   Woody Allen   \n",
        "4                                    NaN                    Paul Hogan   \n",
        "\n",
-       "     imdb_id  box_office release_date  running_time  \n",
-       "0  tt0098987  21400000.0   1990-07-11         102.0  \n",
-       "1  tt0098994   2700000.0   1990-05-17         114.0  \n",
-       "2  tt0099005  57718089.0   1990-08-10         113.0  \n",
-       "3  tt0099012   7331647.0   1990-12-25         106.0  \n",
-       "4  tt0099018   6939946.0   1990-12-19          95.0  \n",
+       "     imdb_id  box_office      budget release_date  running_time  \n",
+       "0  tt0098987  21400000.0  20000000.0   1990-07-11         102.0  \n",
+       "1  tt0098994   2700000.0   6000000.0   1990-05-17         114.0  \n",
+       "2  tt0099005  57718089.0  35000000.0   1990-08-10         113.0  \n",
+       "3  tt0099012   7331647.0  12000000.0   1990-12-25         106.0  \n",
+       "4  tt0099018   6939946.0  25000000.0   1990-12-19          95.0  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
      "execution_count": 7,
@@ -572,6 +577,7 @@
        " 'Writer(s)',\n",
        " 'imdb_id',\n",
        " 'box_office',\n",
+       " 'budget',\n",
        " 'release_date',\n",
        " 'running_time']"
       ]
